Fixed MESOS-2319 by creating the temporary file under the same base directory.

Review: https://reviews.apache.org/r/30635